# text-simplification

./: .gitignore  README.md  comparison_embeddings.ipynb  comparison_nilc.ipynb  comparsion-indexes.ipynb  conllu_adapted.py  corpora_frequencies.py  create_pdfs.py  embeddings_main.py  embeddings_steps.py  evaluate_foreign_words.ipynb  file_processing_steps.py  foreign-words.csv  foreign-words.txt  foreign_words_predicted.csv  linguateca-pt-chain.pem  llama_model.py  main.py  metrics_steps.py  pipelines.py  prompt_simplify_and_summarize_document.txt  prompt_simplify_document.txt  pyproject.toml  request_steps.py  request_udpipe.py  requirements.txt  schema.py  scrape_notices.py  scrape_notices_ufc_inova.py  settings.py  utils.py
data/: frequencias_todos_os_corpora.pkl
test/: conftest.py  test_deepeval.py
